# SIMBA

./: SIMBA.py  autocommit.bat  module_2.py  pyproject.toml  simba_make.py  slurm-14563333_0.out  slurm-14563333_1.out  slurm_trigger.sh
simba/: __init__.py  module_1.py  module_3.py
simba/subfolder/: __init__.py  module_sub_1.py  module_sub_2.py
src/: SIMBA.py
