[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SIMBA"
version = "0.0.1"
authors = [
  { name="Hugh McDougall", email="hughmcdougallemail@gmail.com" },
]
dependencies = [
  'pandas',
]

description = "An example package"
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/HughMcDougall/SIMBA"